<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="firstName"
        android:hint="@string/fName"
        android:inputType="text" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="lastName"
        android:hint="@string/lName"
        android:inputType="text" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="phone"
        android:hint="@string/phone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <!-- User Role Selection -->
    <RadioGroup
        android:id="@+id/rgRole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbAttendee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attendee"
            android:checked="true" />

        <RadioButton
            android:id="@+id/rbOrganizer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/organizer" />
    </RadioGroup>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/loginPart"
        android:onClick="goToLogin" />

</LinearLayout>
